--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 body {
+    margin: 0;
     min-height: 100vh;
     overflow-x: hidden;
     display: grid;
-    grid-template-rows: repeat(2, 1fr) 5fr 1fr;
+    grid-template-rows: 1fr .5fr 5fr 1fr;
 }
 
 form {
+    height: min-content;
     width: fit-content;
     padding: 10px;
     border: 1px solid grey;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer, ul {
@@ -46,7 +50,14 @@ footer {
 
 }
 
+.linkback {
+    margin-left: auto;
+    margin-right: 20px;
+}
+
 #content {
+    margin-top: auto;
+    margin-bottom: auto;
     padding-top: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
